--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "bower": "^1.8.0",
-    "grunt": "~1.0.1"
+    "grunt": "~1.0.1",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-contrib-uglify": "~3.0.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-jshint": "~1.1.0"
   }
 }
