--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "bower": "^1.8.0",
+    "clean-css": "^4.1.2",
     "grunt": "~1.0.1",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-contrib-uglify": "~3.0.0",
     "grunt-contrib-concat": "~1.0.1",
-    "grunt-contrib-jshint": "~1.1.0",
+    "grunt-contrib-csslint": "~2.0.0",
     "grunt-contrib-cssmin": "~2.2.0",
-    "grunt-contrib-csslint": "~2.0.0"
+    "grunt-contrib-jshint": "~1.1.0",
+    "grunt-contrib-uglify": "~3.0.0",
+    "grunt-contrib-watch": "~1.0.0"
   }
 }
