--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean-css": "^4.1.2",
     "grunt": "~1.0.1",
     "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-csslint": "~2.0.0",
     "grunt-contrib-cssmin": "~2.2.0",
     "grunt-contrib-jshint": "~1.1.0",
