--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-csslint": "~2.0.0",
     "grunt-contrib-cssmin": "~2.2.0",
+    "grunt-contrib-eslint": "0.0.5",
     "grunt-contrib-jshint": "~1.1.0",
     "grunt-contrib-uglify": "~3.0.0",
     "grunt-contrib-watch": "~1.0.0"
