--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/flachi1109/vultrainer#readme",
   "devDependencies": {
+    "angular-datatables": "^4.1.0",
     "bootstrap": "^3.3.7",
     "bower": "^1.8.0",
     "clean-css": "^4.1.2",
@@ -28,6 +29,7 @@
     "grunt-contrib-eslint": "0.0.5",
     "grunt-contrib-jshint": "~1.1.0",
     "grunt-contrib-uglify": "~3.0.0",
-    "grunt-contrib-watch": "~1.0.0"
+    "grunt-contrib-watch": "~1.0.0",
+    "ng-table": "^3.0.1"
   }
 }
