--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/flachi1109/vultrainer#readme",
   "devDependencies": {
     "angular-datatables": "^4.1.0",
+    "angular-ui-bootstrap": "^2.5.0",
     "bootstrap": "^3.3.7",
     "bower": "^1.8.0",
     "clean-css": "^4.1.2",
