--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "angular-resource": "^1.6.4",
-    "angular-ui-router": "^1.0.3"
+    "angular-ui-router": "^1.0.3",
+    "bootstrap-ui-treeview": "^3.0.1"
   }
 }
