--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "angular-resource": "^1.6.4",
     "angular-ui-router": "^1.0.3",
-    "bootstrap-ui-treeview": "^3.0.1"
+    "bootstrap-ui-treeview": "^3.0.1",
+    "angular-tree-control": "^0.2.28"
   }
 }
