--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-resource": "^1.6.4",
     "angular-ui-router": "^1.0.3",
     "bootstrap-ui-treeview": "^3.0.1",
-    "angular-tree-control": "^0.2.28"
+    "angular-tree-control": "^0.2.28",
+    "bootstrap-fileinput": "^4.4.1"
   }
 }
