--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular-datatables": "^4.1.0",
     "angular-file-upload": "^2.5.0",
     "angular-ui-bootstrap": "^2.5.0",
+    "angular-websocket": "^2.0.1",
     "bootstrap": "^3.3.7",
     "bower": "^1.8.0",
     "clean-css": "^4.1.2",
